src/styles/global.css
h1,
h2,
h3,
h4,
h5,
h6,
p {
    text-align: center;
}

div {
    justify-content: center;
}

/* Matches above sm in material UI*/
@media screen and (min-width: 600px) {
    div {
        justify-content: flex-start;
    }
    h1,
    h2,
    h3,
    h4,
    h5,
    h6,
    p {
        text-align: left;
    }
}

/* TODO: Fix clipping */
.background {
    overflow: hidden;
    height: 100%;
    width: 100%;
    position: absolute;
    float: left;
    top: 0;
    left: 0;

    display: flex;
    justify-content: center;
    align-items: center;

    z-index: -1; /* Make background behind everything */
}

